--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "inertiajs/inertia-laravel": "^0.6.3",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.8",
+        "laravel/telescope": "^4.11",
         "laravel/tinker": "^2.7",
         "spatie/laravel-login-link": "^1.1",
         "tightenco/ziggy": "^1.0"
