--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "daisyui": "^2.46.1"
     }
 }
