--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "daisyui": "^2.46.1",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41",
-        "daisyui": "^2.46.1"
+        "dayjs": "^1.11.7"
     },
     "dependencies": {}
 }
