--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
+        "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0"
     },
@@ -56,11 +57,18 @@
         ],
         "ide-helper": [
             "@php artisan ide-helper:generate",
-            "@php artisan ide-helper:models -W",
+            "@php artisan ide-helper:models -W -r",
             "@pint"
         ],
         "pint": [
             "vendor/bin/pint"
+        ],
+        "phpstan": [
+            "vendor/bin/phpstan analyse -l 1 app"
+        ],
+        "lint": [
+            "@pint",
+            "@phpstan"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
