--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "daisyui": "^2.46.1",
+        "dayjs": "^1.11.7",
+        "element-plus": "^2.2.28",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
+        "unplugin-auto-import": "^0.12.1",
+        "unplugin-vue-components": "^0.22.12",
         "vite": "^4.0.0",
-        "vue": "^3.2.41",
-        "dayjs": "^1.11.7"
-    },
-    "dependencies": {}
+        "vue": "^3.2.41"
+    }
 }
