♻️ Continue refactor to React

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,15 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/*": ["resources/js/*"]
-        }
+            "@/*": [
+                "resources/js/*"
+            ]
+        },
+        "checkJs": true,
+        "jsx": "react-jsx"
     },
-    "exclude": ["node_modules", "public"]
+    "exclude": [
+        "node_modules",
+        "public"
+    ]
 }
