--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ashallendesign/favicon-fetcher": "^1.3",
         "bensampo/laravel-enum": "^6.2",
         "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
