--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^2.8",
         "laravel/telescope": "^4.11",
         "laravel/tinker": "^2.7",
+        "openai-php/laravel": "^0.3.0",
         "spatie/laravel-login-link": "^1.1",
         "tightenco/ziggy": "^1.0",
         "willvincent/feeds": "^2.4"
