--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.0.2",
         "ashallendesign/favicon-fetcher": "^1.3",
         "bensampo/laravel-enum": "^6.2",
+        "brendt/php-sparkline": "^1.0",
         "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.3",
