Feed search: use Laravel Scout with Meilisearch instead of DB

--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,15 @@
         "brendt/php-sparkline": "^1.0",
         "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^0.6.3",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.8",
+        "laravel/scout": "^9.8",
         "laravel/telescope": "^4.11",
         "laravel/tinker": "^2.7",
         "lorisleiva/laravel-actions": "^2.4",
+        "meilisearch/meilisearch-php": "^0.27.0",
         "openai-php/laravel": "^0.3.0",
         "spatie/laravel-login-link": "^1.1",
         "tightenco/ziggy": "^1.0",
