--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "bensampo/laravel-enum": "^6.2",
         "brendt/php-sparkline": "^1.0",
         "doctrine/dbal": "^3.5",
+        "gioni06/gpt3-tokenizer": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^0.6.3",
