--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,15 @@
         "gioni06/gpt3-tokenizer": "^1.1",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.31",
+        "laravel/horizon": "^5.30",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9",
-        "tightenco/ziggy": "^2.0",
         "laravel/scout": "^10.11",
         "laravel/telescope": "^5.2",
+        "laravel/tinker": "^2.9",
         "lorisleiva/laravel-actions": "^2.4",
         "openai-php/laravel": "^0.10.0",
         "spatie/laravel-login-link": "^1.1",
+        "tightenco/ziggy": "^2.0",
         "willvincent/feeds": "^2.4"
     },
     "require-dev": {
