--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "lint": "eslint resources/js --ext .js,.ts,.vue --ignore-path .gitignore --fix"
     },
     "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
+        "@inertiajs/vue3": "^2.0.0",
         "@rushstack/eslint-patch": "^1.8.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.10",
@@ -21,21 +21,21 @@
         "daisyui": "^4.12.22",
         "dayjs": "^1.11.7",
         "element-plus": "^2.2.28",
-        "eslint-plugin-vue": "^9.23.0",
         "eslint": "^8.57.0",
+        "eslint-plugin-vue": "^9.23.0",
         "flowbite": "^2.5.2",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "prettier": "^3.3.0",
         "prettier-plugin-organize-imports": "^4.0.0",
         "prettier-plugin-tailwindcss": "^0.6.5",
-        "prettier": "^3.3.0",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.5.3",
-        "vite": "^6.0",
-        "vue-tsc": "^2.0.24",
-        "vue": "^3.4.0",
         "unplugin-auto-import": "^0.12.1",
         "unplugin-vue-components": "^0.22.12",
-        "vue-tabler-icons": "^2.18.0"
+        "vite": "^6.0",
+        "vue": "^3.4.0",
+        "vue-tabler-icons": "^2.18.0",
+        "vue-tsc": "^2.0.24"
     }
 }
