Setup Mantine and setup initial view

--- a/package.json
+++ b/package.json
@@ -7,10 +7,20 @@
         "lint": "eslint resources/js --ext .js,.ts,.vue --ignore-path .gitignore --fix"
     },
     "devDependencies": {
+        "@gfazioli/mantine-split-pane": "^0.3.7",
         "@headlessui/react": "^2.0.0",
+        "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
         "@inertiajs/react": "^2.0.0",
         "@inertiajs/vue3": "^2.0.0",
+        "@mantine/charts": "^7.15.1",
+        "@mantine/core": "^7.15.1",
+        "@mantine/form": "^7.15.1",
+        "@mantine/hooks": "^7.15.1",
+        "@mantine/modals": "^7.15.1",
+        "@mantine/notifications": "^7.15.1",
+        "@mantine/spotlight": "^7.15.1",
         "@rushstack/eslint-patch": "^1.8.0",
+        "@tabler/icons-react": "^3.26.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.10",
         "@types/node": "^18.13.0",
@@ -37,12 +47,15 @@
         "eslint-plugin-vue": "^9.23.0",
         "flowbite": "^2.5.2",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.31",
+        "postcss": "^8.4.49",
+        "postcss-preset-mantine": "^1.17.0",
+        "postcss-simple-vars": "^7.0.1",
         "prettier": "^3.3.0",
         "prettier-plugin-organize-imports": "^4.0.0",
         "prettier-plugin-tailwindcss": "^0.6.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "recharts": "^2.15.0",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "unplugin-auto-import": "^0.12.1",
