--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,27 @@
 {
     "singleQuote": true,
     "plugins": [
-        "prettier-plugin-organize-imports",
+        "@trivago/prettier-plugin-sort-imports",
         "prettier-plugin-tailwindcss"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true,
+    "importOrder": [
+        ".*styles.css$",
+        "",
+        "dayjs",
+        "^react$",
+        "^next$",
+        "^next/.*$",
+        "<BUILTIN_MODULES>",
+        "<THIRD_PARTY_MODULES>",
+        "^@mantine/(.*)$",
+        "^@mantinex/(.*)$",
+        "^@mantine-tests/(.*)$",
+        "^@docs/(.*)$",
+        "^@/.*$",
+        "^../(?!.*.css$).*$",
+        "^./(?!.*.css$).*$",
+        "\\.css$"
     ]
 }
