--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,9 @@
     "importOrderSeparation": true,
     "importOrderSortSpecifiers": true,
     "importOrder": [
+        "^@mantine/(.*)/styles.css$",
         ".*styles.css$",
+        ".*module.css$",
         "",
         "dayjs",
         "^react$",
