--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,9 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
+        "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^11.0.1",
-        "phpstan/phpstan": "^1.9"
+        "wulfheart/laravel-actions-ide-helper": "^0.8.0"
     },
     "autoload": {
         "psr-4": {
@@ -63,6 +64,7 @@
         "ide-helper": [
             "@php artisan ide-helper:generate",
             "@php artisan ide-helper:models -W -r",
+            "@php artisan ide-helper:actions",
             "@pint"
         ],
         "pint": [
