--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,7 @@
 {
     "singleQuote": true,
     "plugins": [
-        "@trivago/prettier-plugin-sort-imports",
-        "prettier-plugin-tailwindcss"
+        "@trivago/prettier-plugin-sort-imports"
     ],
     "importOrderSeparation": true,
     "importOrderSortSpecifiers": true,
