--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vue-tsc && vite build",
+        "build": "tsc && vite build",
         "dev": "vite",
-        "lint": "eslint resources/js --ext .js,.ts,.vue --ignore-path .gitignore --fix"
+        "lint": "eslint resources/js --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix"
     },
     "devDependencies": {
         "@gfazioli/mantine-split-pane": "^0.3.7",
         "@headlessui/react": "^2.0.0",
         "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
         "@inertiajs/react": "^2.0.0",
-        "@inertiajs/vue3": "^2.0.0",
         "@mantine/charts": "^7.15.1",
         "@mantine/core": "^7.15.1",
         "@mantine/form": "^7.15.1",
@@ -27,23 +26,15 @@
         "@typescript-eslint/eslint-plugin": "^7.16.0",
         "@typescript-eslint/parser": "^7.16.0",
         "@vitejs/plugin-react": "^4.2.0",
-        "@vitejs/plugin-vue": "^5.0.0",
-        "@vue/eslint-config-prettier": "^9.0.0",
-        "@vue/eslint-config-typescript": "^13.0.0",
-        "@vueuse/core": "^9.11.1",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "daisyui": "^4.12.22",
         "dayjs": "^1.11.7",
-        "element-plus": "^2.2.28",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react": "^7.34.4",
         "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-vue": "^9.23.0",
-        "flowbite": "^2.5.2",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.49",
         "postcss-preset-mantine": "^1.17.0",
@@ -55,10 +46,6 @@
         "recharts": "^2.15.0",
         "typescript": "^5.0.2",
         "unplugin-auto-import": "^0.12.1",
-        "unplugin-vue-components": "^0.22.12",
-        "vite": "^6.0",
-        "vue": "^3.4.0",
-        "vue-tabler-icons": "^2.18.0",
-        "vue-tsc": "^2.0.24"
+        "vite": "^6.0"
     }
 }
