--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.31",
         "laravel/horizon": "^5.30",
+        "laravel/pennant": "^1.14",
         "laravel/sanctum": "^4.0",
         "laravel/scout": "^10.11",
         "laravel/telescope": "^5.2",
