--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "bensampo/laravel-enum": "^6.2",
         "echolabsdev/prism": "^0.22.0",
         "inertiajs/inertia-laravel": "^2.0",
+        "laravel-notification-channels/telegram": "^5.0",
         "laravel/framework": "^11.31",
         "laravel/horizon": "^5.30",
         "laravel/pennant": "^1.14",
