Add Sentry integration

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,7 @@ OPENAI_API_KEY=
 
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
+
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=
+SENTRY_PROFILES_SAMPLE_RATE=
