--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
         "lorisleiva/laravel-actions": "^2.8",
+        "sentry/sentry-laravel": "^4.10",
         "spatie/laravel-login-link": "^1.1",
         "tightenco/ziggy": "^2.4",
         "willvincent/feeds": "^2.4"
