--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel-notification-channels/telegram": "^5.0",
         "laravel/framework": "^11.31",
         "laravel/horizon": "^5.30",
+        "laravel/octane": "^2.6",
         "laravel/pennant": "^1.14",
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.2",
@@ -25,6 +26,8 @@
         "lorisleiva/laravel-actions": "^2.8",
         "sentry/sentry-laravel": "^4.10",
         "spatie/laravel-login-link": "^1.1",
+        "spiral/roadrunner-cli": "^2.6.0",
+        "spiral/roadrunner-http": "^3.3.0",
         "tightenco/ziggy": "^2.4",
         "willvincent/feeds": "^2.4"
     },
