--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel-notification-channels/telegram": "^5.0",
         "laravel/framework": "^11.31",
         "laravel/horizon": "^5.30",
+        "laravel/octane": "^2.6",
         "laravel/pennant": "^1.14",
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.2",
