--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -66,7 +66,7 @@ USER ${USER}
 
 COPY --link --chown=${WWWUSER}:${WWWUSER} --from=composer /usr/bin/composer /usr/bin/composer
 
-COPY --link --chown=${WWWUSER}:${WWWUSER} php.ini ${PHP_INI_DIR}/conf.d/99-octane.ini
+COPY --link --chown=${WWWUSER}:${WWWUSER} deploy/php.ini ${PHP_INI_DIR}/conf.d/99-octane.ini
 
 COPY --link --chown=${WWWUSER}:${WWWUSER} composer.json composer.lock ./
 
