--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -71,8 +71,6 @@ COPY --link --chown=${WWWUSER}:${WWWUSER} deploy/php.ini ${PHP_INI_DIR}/conf.d/9
 COPY --link --chown=${WWWUSER}:${WWWUSER} composer.json composer.lock ./
 
 RUN composer install \
-    --classmap-authoritative \
-    --optimize-autoloader \
     --no-dev \
     --no-interaction \
     --no-autoloader \
@@ -105,3 +103,10 @@ RUN mkdir -p \
     storage/framework/{sessions,views,cache,testing} \
     storage/logs \
     bootstrap/cache && chmod -R a+rw storage
+
+RUN composer install \
+    --classmap-authoritative \
+    --no-interaction \
+    --no-ansi \
+    --no-dev \
+    && composer clear-cache
