Proxy favicons through imgproxy

--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,7 @@ TELEGRAM_CHAT_ID=
 SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=
 SENTRY_PROFILES_SAMPLE_RATE=
+
+IMGPROXY_KEY=
+IMGPROXY_SALT=
+IMGPROXY_URL=
