Add lint-check and format scripts to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "scripts": {
         "build": "tsc && vite build",
         "dev": "vite",
-        "lint": "eslint resources/js --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix"
+        "lint": "eslint resources/js --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix",
+        "lint-check": "eslint resources/js --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore",
+        "format": "prettier --write .",
+        "format-check": "prettier --check ."
     },
     "devDependencies": {
         "@gfazioli/mantine-split-pane": "^0.3.7",
