--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,8 @@
         "skipLibCheck": true,
         "noEmit": true,
         "paths": {
-            "@/*": [
-                "./resources/js/*"
-            ],
-            "ziggy-js": [
-                "./vendor/tightenco/ziggy"
-            ]
+            "@/*": ["./resources/js/*"],
+            "ziggy-js": ["./vendor/tightenco/ziggy"]
         }
     },
     "include": [
