--- a/composer.json
+++ b/composer.json
@@ -93,7 +93,7 @@
             "Composer\\Config::disableProcessTimeout",
             "composer install",
             "npm install",
-            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
+            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74,#86efac\" \"php artisan serve\" \"php artisan queue:listen\" \"php artisan pail --timeout=0\" \"npm run dev\" \"while true; do php artisan schedule:run --verbose --no-interaction;sleep 60;done\" --names=server,queue,logs,vite,scheduler"
         ]
     },
     "extra": {
