Run frankenphp without octane

--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -3,9 +3,7 @@
 
 	admin {$CADDY_SERVER_ADMIN_HOST}:{$CADDY_SERVER_ADMIN_PORT}
 
-	frankenphp {
-		worker "{$APP_PUBLIC_PATH}/frankenphp-worker.php" {$CADDY_SERVER_WORKER_COUNT}
-	}
+	frankenphp
 }
 
 {$CADDY_SERVER_SERVER_NAME} {
