--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/horizon": "^5.30",
         "laravel/octane": "^2.6",
         "laravel/pennant": "^1.14",
+        "laravel/pulse": "^1.3",
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
