But open-pull-requests-limit for dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ version: 2
 updates:
   - package-ecosystem: npm
     directory: "/"
+    open-pull-requests-limit: 20
     schedule:
       interval: weekly
 
@@ -17,5 +18,6 @@ updates:
 
   - package-ecosystem: "composer"
     directory: "/"
+    open-pull-requests-limit: 20
     schedule:
       interval: weekly
