Fix Mantine package pattern in Dependabot configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,7 @@ updates:
     groups:
       mantine:
         patterns:
-        - "mantine*
+          - "@mantine/*"
 
   - package-ecosystem: "github-actions"
     directory: "/"
