--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "scripts": {
         "build": "tsc && vite build",
         "dev": "vite",
-        "lint": "eslint resources/js --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix",
-        "lint-check": "eslint resources/js --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore",
+        "lint": "eslint resources/js --fix",
+        "lint-check": "eslint resources/js",
         "format": "prettier --write .",
         "format-check": "prettier --check ."
     },
     "devDependencies": {
+        "@eslint/compat": "^1.2.5",
+        "@eslint/eslintrc": "^3.2.0",
+        "@eslint/js": "^9.19.0",
         "@gfazioli/mantine-split-pane": "^1.0.4",
         "@headlessui/react": "^2.0.0",
         "@inertiajs/react": "^2.0.3",
@@ -24,18 +27,19 @@
         "@types/node": "^22.10.10",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
-        "@typescript-eslint/eslint-plugin": "^7.16.0",
-        "@typescript-eslint/parser": "^7.16.0",
+        "@typescript-eslint/eslint-plugin": "^8.22.0",
+        "@typescript-eslint/parser": "^8.22.0",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "concurrently": "^9.1.2",
         "dayjs": "^1.11.7",
-        "eslint": "^8.57.0",
+        "eslint": "^9.19.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-prettier": "^5.2.3",
         "eslint-plugin-react": "^7.37.4",
         "eslint-plugin-react-hooks": "^5.1.0",
+        "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.2",
         "postcss": "^8.5.1",
         "postcss-preset-mantine": "^1.17.0",
