--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-prettier": "^5.2.3",
         "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
         "eslint-plugin-react-hooks": "^5.1.0",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.2",
@@ -47,12 +48,14 @@
         "prettier": "^3.3.0",
         "prettier-plugin-organize-imports": "^4.0.0",
         "react": "^18.2.0",
+        "react-compiler-runtime": "^19.0.0-beta-27714ef-20250124",
         "react-dom": "^18.2.0",
         "recharts": "^2.15.0",
         "typescript": "^5.7.3",
         "vite": "^6.0"
     },
     "dependencies": {
+        "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
         "reading-time-estimator": "^1.11.0"
     }
 }
