Use slim variant of Node.js image in Dockerfile for npm build

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -80,7 +80,7 @@ RUN composer install \
     --no-scripts \
     --audit
 
-FROM node:${NODE_VERSION} AS npm_build
+FROM node:${NODE_VERSION}-slim AS npm_build
 
 ENV ROOT=/var/www/html
 
