--- a/package.json
+++ b/package.json
@@ -50,11 +50,10 @@
         "react": "^18.2.0",
         "react-compiler-runtime": "^19.0.0-beta-27714ef-20250124",
         "react-dom": "^18.2.0",
-        "recharts": "^2.15.0",
+        "recharts": "^2.15.1",
         "typescript": "^5.7.3",
-        "vite": "^6.0"
-    },
-    "dependencies": {
+        "vite": "^6.0",
+        "@mantine/charts": "^7.16.2",
         "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
         "reading-time-estimator": "^1.11.0"
     }
