--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@gfazioli/mantine-split-pane": "^1.0.4",
         "@headlessui/react": "^2.0.0",
         "@inertiajs/react": "^2.0.3",
+        "@mantine/charts": "^7.16.2",
         "@mantine/core": "^7.16.2",
         "@mantine/hooks": "^7.16.2",
         "@mantine/modals": "^7.16.2",
@@ -32,6 +33,7 @@
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
+        "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
         "concurrently": "^9.1.2",
         "dayjs": "^1.11.7",
         "eslint": "^9.19.0",
@@ -41,7 +43,9 @@
         "eslint-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
         "eslint-plugin-react-hooks": "^5.1.0",
         "globals": "^15.14.0",
+        "laravel-echo": "^1.19.0",
         "laravel-vite-plugin": "^1.2",
+        "laravel-wave": "^0.8.1",
         "postcss": "^8.5.1",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7.0.1",
@@ -50,11 +54,9 @@
         "react": "^18.2.0",
         "react-compiler-runtime": "^19.0.0-beta-27714ef-20250124",
         "react-dom": "^18.2.0",
+        "reading-time-estimator": "^1.11.0",
         "recharts": "^2.15.1",
         "typescript": "^5.7.3",
-        "vite": "^6.0",
-        "@mantine/charts": "^7.16.2",
-        "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
-        "reading-time-estimator": "^1.11.0"
+        "vite": "^6.0"
     }
 }
