--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -50,6 +50,9 @@ RUN apt-get update; \
     zip \
     # for sentry profiles
     excimer \
+    # for datadog
+    && curl -LO https://github.com/DataDog/dd-trace-php/releases/latest/download/datadog-setup.php \
+    && php datadog-setup.php --php-bin=all --enable-appsec --enable-profiling \
     && apt-get -y autoremove \
     && apt-get clean \
     && docker-php-source delete \
