--- a/.env.compose
+++ b/.env.compose
@@ -49,7 +49,7 @@ GEMINI_API_KEY=
 # TELEGRAM_BOT_TOKEN=
 # TELEGRAM_CHAT_ID=
 
-# SENTRY_LARAVEL_DSN=https://c83f1138f1cc906039eeba69fc07e604@o4508545005649920.ingest.de.sentry.io/4508545011089488
+# SENTRY_LARAVEL_DSN=
 # SENTRY_TRACES_SAMPLE_RATE=1.0
 # SENTRY_PROFILES_SAMPLE_RATE=1.0
 
