--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,9 @@ updates:
       eslint:
         patterns:
           - "*eslint*"
+      vite:
+        patterns:
+          - "*vite*"
 
   - package-ecosystem: "github-actions"
     directory: "/"
