--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -49,7 +49,7 @@ RUN apt-get update; \
     pcntl \
     zip \
     # for sentry profiles
-    excimer \
+    # excimer \
     # for datadog
     && curl -LO https://github.com/DataDog/dd-trace-php/releases/latest/download/datadog-setup.php \
     && php datadog-setup.php --php-bin=all --enable-appsec --enable-profiling \
