--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -104,6 +104,7 @@ ARG DD_GIT_REPOSITORY_URL
 ARG DD_GIT_COMMIT_SHA
 ENV DD_GIT_REPOSITORY_URL=${DD_GIT_REPOSITORY_URL}
 ENV DD_GIT_COMMIT_SHA=${DD_GIT_COMMIT_SHA}
+ENV DD_VERSION=${DD_GIT_COMMIT_SHA}
 
 USER ${USER}
 
