--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -65,4 +65,4 @@ jobs:
         run: cp .env.example .env
 
       - name: Run test suite
-        run: php artisan test
+        run: php artisan test --parallel --testdox
