Replace ESLint + Prettier with Biome for faster JS/TS linting
- Add Biome for combined linting and formatting (~14x faster)
- Update pre-commit hook to use Biome instead of ESLint + Prettier
- Update composer check script to use Biome
- Add biome.json configuration
- Auto-fix all Biome issues across codebase
- Add useCallback to scroll functions for proper hook dependencies

--- a/composer.json
+++ b/composer.json
@@ -86,8 +86,7 @@
         "check": [
             "vendor/bin/pint --test",
             "vendor/bin/phpstan analyse --memory-limit=512M",
-            "npm run lint-check",
-            "npm run format-check",
+            "npx biome check",
             "npx tsc --noEmit"
         ],
         "setup-hooks": [
