Set APP_KEY in testing environment configuration

--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Larafeed
 APP_ENV=testing
-APP_KEY=
+APP_KEY=base64:T0C4PELDAtsJYsH5t2i3reQ3tllEqylxXNxhT55SF70=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
