Add DDTrace attributes to enrich traces with domain data
Instrument 9 key actions with Datadog tracing:
- ShowFeedReader: reader page with filter/feed/entry context
- RefreshFeed, FetchFeed, IngestFeedEntries: feed refresh pipeline
- RefreshFavicon: favicon updates
- CreateNewFeed: feed creation with user context
- ImportOPML: OPML imports with feed/category counts
- SummarizeEntryWithLLM: LLM calls with cache hit tracking
- ApplySubscriptionFilters: filter application metrics

All spans include relevant domain tags (feed.id, entry counts, etc.)
for better observability in Datadog APM.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -17,5 +17,9 @@ parameters:
             paths:
                 - app/Actions/ShowFeedReader.php
 
+        # DDTrace is a runtime PHP extension, not available during static analysis
+        -
+            message: '#Attribute class DDTrace\\Trace does not exist#'
+
 #    excludePaths:
 #        - ./*/*/FileToBeExcluded.php
