Fix IMGPROXY_URL to use localhost for browser access

--- a/.env.compose
+++ b/.env.compose
@@ -87,5 +87,6 @@ GEMINI_API_KEY=
 # -----------------------------------------------------------------------------
 # Image Proxy (imgproxy)
 # -----------------------------------------------------------------------------
-# Keys are auto-generated on first run. Only change IMGPROXY_URL if needed.
-IMGPROXY_URL=http://imgproxy:8080
+# Keys are auto-generated on first run.
+# Change this to your public imgproxy URL in production.
+IMGPROXY_URL=http://localhost:8080
